[project]
name = "mcp-example"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server providing weather data through the Open-Meteo API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.13.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
]
